# SFTP

./: CMakeLists.txt  main.cpp  mytest.cpp  read.cpp  testSFTP.cpp  testSFTP.h  testmm.cpp
lib/: libcjson.so.1.7.12  libcjson_utils.so.1  libcrypto.so.1.0.0  libcurl.so.4.8.0  libftp.so.4  libnpc.so.2  libopencv_img_hash.so.406  libpaho-mqtt3c.so.1  libpaho-mqtt3cs.so.1.3  libprotobuf-c.so.1  libssh2.so.1  libssl.so.1.0.0  libssl.so.1.1  libzlog.so.1.2  stereo_calib  stereo_calib.xml
